--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport">
     <title>Images</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <img id="image1" src="image.jpg" alt="">
-    <canvas id="draw" width="400" height="300" style="border: 1px solid;"></canvas>
-    <img id="image2" src="image.jpg" alt="">
-    <canvas id="draw2" width="400" height="300" style="border: 1px solid"></canvas>
-
+    <canvas id="example"  style="border: 1px solid;"></canvas>
+    <canvas id="example2"  style="border: 1px solid;"></canvas>
+    
 
     <script src="code.js"></script>
 </body>
