--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,14 @@
     <title>Images</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
-    <canvas id="example"  style="border: 1px solid;"></canvas>
-    <canvas id="example2"  style="border: 1px solid;"></canvas>
-    
+    <canvas id="originalCanvas" style="border: 1px solid;"></canvas>
+    <canvas id="changedCanvas" style="border: 1px solid;"></canvas>
+
 
     <script src="code.js"></script>
 </body>
+
 </html>
