--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
 
-    <canvas id="originalCanvas" style="border: 1px solid;"></canvas>
-    <canvas id="changedCanvas" style="border: 1px solid;"></canvas>
+    <canvas id="originalCanvas" class="housePicCanvas"></canvas>
+    <canvas id="changedCanvas" class="housePicCanvas"></canvas>
 
 
     <script src="code.js"></script>
